src/css/components/po-page/po-page-header/po-page-header.css
:root {
  --font-page-header-title-smaller: {
    @apply --font-subtitle;
  }
}

po-page-header {
  flex-shrink: 0;
}

.po-page-header {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  gap: var(--gap, var(--po-density-gap-spacing, var(--default-spacing-xs, var(--spacing-md))));
  padding: var(--padding, var(--po-density-header-padding, var(--spacing-xs) var(--spacing-md)));
  width: 100%;
}

.po-page-header-container {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: flex-start;
  flex-wrap: wrap;
}

.po-page-header-title-container {
  display: inline-flex;
  flex-direction: column;
  gap: var(--spacing-xs);
}

.po-page-header-title-container .po-page-header-title {
  color: var(--color-page-header-color-title, var(--color-neutral-dark-70));
}

.po-page-header-title {
  font-family: var(--font-family);
  font-size: var(--font-size-lg);
  font-weight: var(--font-weight-bold);
  line-height: var(--line-height-sm);
  letter-spacing: var(--letter-spacing-auto);
}

.po-page-header-subtitle {
  font-size: var(--font-size-sm);
  font-weight: var(--font-weight-normal);
  line-height: var(--line-height-2xs);
  color: var(--color-neutral-dark-70);
  letter-spacing: var(--letter-spacing-auto);
}

.po-page-header-actions {
  flex-grow: 1;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: flex-start;
  gap: var(--gap-actions);
}

@media (min-width: 480px) {
  .po-page-header-container {
    flex-direction: row;
    align-items: center;
  }
}

@media screen and (max-width: 1366px) {
  .po-page-header-actions {
    gap: var(--gap-actions, var(--spacing-xs));
  }
}

@media (max-width: 479px) {
  .po-page-header-actions {
    margin: 0;
  }

  .po-page-header-actions .po-button,
  .po-page-header-actions .po-dropdown {
    margin: 8px 0 0 0;
    width: 100%;
  }
}

/* Secondary Header Variant */
.po-page-header-secondary {
  background: none;
  padding: var(--spacing-sm);
}

.po-page-header-secondary .po-page-header-title {
  font-size: var(--font-size-md);
  font-weight: var(--font-weight-semibold);
  line-height: var(--line-height-sm);
  letter-spacing: 0;
}

.po-page-header-secondary .po-page-header-container {
  flex-direction: row;
  align-items: center;
}

.po-page-header-secondary [po-page-header-navigation] + .po-page-header-title-container {
  margin-left: var(--gap-navigation, var(--spacing-xs));
}

/* Tertiary Header Variant */
.po-page-header-tertiary .po-page-header-title {
  font-weight: var(--font-weight-normal);
}

